--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,5 @@
 <app-user></app-user>
 <app-data-binding> {{message}} </app-data-binding>
 <app-template-form></app-template-form>
+<app-reactive-form></app-reactive-form>
 </div>
