--- a/src/app/forms/template-form/template-form.component.html
+++ b/src/app/forms/template-form/template-form.component.html
@@ -1,39 +1,62 @@
-<div class="container">
-    <div class="row">
+<div class="container lg-100%">
+    <div class="row col-6">
         <form (ngSubmit)="onSubmit(f)" #f="ngForm">
             <div id="user-data">
                 <div class="form-group">
                     <label for="firstName">First Name</label>
-                    <input type="text" id="fristName" class="form-control" ngModel name="firstName">
+                    <input type="text" id="fristName" class="form-control" ngModel name="firstName" required firstName #firstName="ngModel">
+                    <span class="errors" *ngIf="!firstName.valid && firstName.touched">Enter valid first Name</span>
                 </div>
                 <div class="form-group">
                     <label for="lastName">Last name</label>
-                    <input type="text" id="lastName" class="form-control"ngModel name="lastName" required>
+                    <input type="text" id="lastName" class="form-control"ngModel name="lastName" required lastName #lastName="ngModel">
+                    <span class="errors" *ngIf="!lastName.valid && lastName.touched">Enter valid Last Name</span>
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" id="email" class="form-control"ngModel name="email" required>
+                    <input type="email" id="email" class="form-control"ngModel name="email" required email #email="ngModel">
+                    <span class="errors" *ngIf="!email.valid && email.touched">Enter valid Email</span>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" id="password" class="form-control"ngModel name="password" required>
+                    <input type="password" id="password" class="form-control"ngModel name="password" required password #password="ngModel">
+                    <span class="errors" *ngIf="!password.valid && password.touched">Enter valid password</span>
                 </div>
                 <div class="form-group">
                     <label for="age">Age</label>
-                    <input type="text" id="age" class="form-control"ngModel name="age"required>
+                    <input type="number" id="age" class="form-control"ngModel name="age"required age #age="ngModel">
+                    <span class="errors" *ngIf="!age.valid && age.touched">Enter valid age</span>
                 </div>
                 <div class="form-group">
                     <label for="gender">Gender</label>
-                    <input type="text" id="Gender" class="form-control"ngModel name="gender" required>
+                    <input type="text" id="Gender" class="form-control"ngModel name="gender" required gender #gender="ngModel">
+                    <span class="errors" *ngIf="!gender.valid && gender.touched">Enter valid gender</span>
                 </div>
                 <div class="form-group">
                     <label for="phone">Phone</label>
-                    <input type="number" id="phone" class="form-control"ngModel name="phone" required>
+                    <input type="number" id="phone" class="form-control"ngModel name="phone" required phone #phone="ngModel">
+                    <span class="errors" *ngIf="!phone.valid && phone.touched">Enter valid phone</span>
                 </div>
                 <div class="form-group">
                     <button class="btn btn-success" [disabled]="!f.valid">register</button>
+                </div>
+                <div class="form-group mb-3">
+                    <label for="formFilesSn" class="formlabel text-red"  >Small file input example</label>
+                    <input class="form-control form-control-sm" id="formFileSm" type="file">
                 </div>
             </div>
         </form>
     </div>
 </div>
+
+<div *ngIf="submited">
+<h3>First Name: {{user.firstName}}</h3>
+<h3>lastName: {{user.lastName}}</h3>
+<h3>email: {{user.email}}</h3>
+<h3>age: {{user.age}}</h3>
+<h3>password: {{user.password}}</h3>
+<h3>gender: {{user.gender}}</h3>
+<h3>phone: {{user.phone}}</h3>
+</div>
+
+
